--- a/packages/example/tsconfig.app.json
+++ b/packages/example/tsconfig.app.json
@@ -24,7 +24,13 @@
 
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+
+    "plugins": [
+      {
+        "name": "@effect/language-service"
+      }
+    ]
   },
   "include": ["src"]
 }
