--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@effect/language-service": "^0.23.4",
     "@eslint/js": "^9.26.0",
     "@tanstack/react-router": "^1.120.3",
     "@tanstack/react-router-devtools": "^1.120.3",
@@ -36,9 +37,10 @@
     "@typed/id": "^0.17.2",
     "@typed/lazy-ref": "^0.3.3",
     "effect": "^3.15.1",
+    "effect-fc": "workspace:*",
     "lucide-react": "^0.510.0",
     "mobx": "^6.13.7",
-    "effect-fc": "workspace:*"
+    "react-icons": "^5.5.0"
   },
   "overrides": {
     "effect": "^3.15.1",
