--- a/packages/effect-fc/package.json
+++ b/packages/effect-fc/package.json
@@ -1,7 +1,7 @@
 {
   "name": "effect-fc",
-  "description": "Write React function components using Effect generators",
-  "version": "0.1.0",
+  "description": "Write React function components with Effect",
+  "version": "0.1.1",
   "type": "module",
   "files": [
     "./README.md",
