--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -11,42 +11,37 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@effect/language-service": "^0.23.4",
-    "@eslint/js": "^9.26.0",
-    "@tanstack/react-router": "^1.120.3",
-    "@tanstack/react-router-devtools": "^1.120.3",
-    "@tanstack/router-plugin": "^1.120.3",
-    "@thilawyn/thilaschema": "^0.1.4",
-    "@types/react": "^19.1.4",
-    "@types/react-dom": "^19.1.5",
-    "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.26.0",
+    "@effect/language-service": "^0.35.2",
+    "@eslint/js": "^9.34.0",
+    "@tanstack/react-router": "^1.131.27",
+    "@tanstack/react-router-devtools": "^1.131.27",
+    "@tanstack/router-plugin": "^1.131.27",
+    "@types/react": "^19.1.11",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react": "^5.0.1",
+    "eslint": "^9.34.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.1.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "typescript-eslint": "^8.32.1",
-    "vite": "^6.3.5"
+    "globals": "^16.3.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "typescript-eslint": "^8.40.0",
+    "vite": "^7.1.3"
   },
   "dependencies": {
-    "@effect/platform": "^0.82.1",
-    "@effect/platform-browser": "^0.62.1",
+    "@effect/platform": "^0.90.6",
+    "@effect/platform-browser": "^0.70.0",
     "@radix-ui/themes": "^3.2.1",
     "@typed/async-data": "^0.13.1",
     "@typed/id": "^0.17.2",
     "@typed/lazy-ref": "^0.3.3",
-    "effect": "^3.15.1",
+    "effect": "^3.17.9",
     "effect-fc": "workspace:*",
-    "lucide-react": "^0.510.0",
-    "mobx": "^6.13.7",
     "react-icons": "^5.5.0"
   },
   "overrides": {
-    "effect": "^3.15.1",
-    "@effect/platform": "^0.82.1",
-    "@effect/platform-browser": "^0.62.1",
-    "@typed/lazy-ref": "^0.3.3",
-    "@typed/async-data": "^0.13.1"
+    "@types/react": "^19.1.11",
+    "effect": "^3.17.9",
+    "react": "^19.1.1"
   }
 }
