--- a/packages/example/tsconfig.app.json
+++ b/packages/example/tsconfig.app.json
@@ -22,15 +22,15 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
 
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     },
 
     "plugins": [
-      {
-        "name": "@effect/language-service"
-      }
+      { "name": "@effect/language-service" }
     ]
   },
+
   "include": ["src"]
 }
