--- a/.gitea/workflows/lint.yaml
+++ b/.gitea/workflows/lint.yaml
@@ -12,5 +12,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install dependencies
         run: bun install --frozen-lockfile
-      - name: Build
-        run: bun run build
+      - name: Lint TypeScript
+        run: bun lint:tsc
+      - name: Lint Biome
+        run: bun lint:biome
