--- a/.gitea/workflows/publish.yaml
+++ b/.gitea/workflows/publish.yaml
@@ -15,6 +15,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Install dependencies
         run: bun install --frozen-lockfile
+      - name: Lint TypeScript
+        run: bun lint:tsc
+      - name: Lint Biome
+        run: bun lint:biome
       - name: Build
         run: bun run build
       - name: Publish effect-fc
