--- a/.gitea/workflows/test-build.yaml
+++ b/.gitea/workflows/test-build.yaml
@@ -12,12 +12,16 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: "22"
       - name: Clone repo
         uses: actions/checkout@v4
       - name: Install dependencies
         run: bun install --frozen-lockfile
+      - name: Lint TypeScript
+        run: bun lint:tsc
+      - name: Lint Biome
+        run: bun lint:biome
       - name: Build
         run: bun run build
       - name: Pack
-        run: bun run pack
+        run: bun pack
