--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -5,43 +5,40 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
     "lint:tsc": "tsc --noEmit",
-    "lint:eslint": "eslint .",
-    "preview": "vite preview"
+    "lint:biome": "biome lint",
+    "preview": "vite preview",
+    "clean:cache": "rm -rf .turbo node_modules/.tmp node_modules/.vite* .tanstack",
+    "clean:dist": "rm -rf dist",
+    "clean:modules": "rm -rf node_modules"
   },
   "devDependencies": {
-    "@effect/language-service": "^0.35.2",
-    "@eslint/js": "^9.34.0",
-    "@tanstack/react-router": "^1.131.27",
-    "@tanstack/react-router-devtools": "^1.131.27",
-    "@tanstack/router-plugin": "^1.131.27",
-    "@types/react": "^19.1.11",
-    "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^5.0.1",
-    "eslint": "^9.34.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "typescript-eslint": "^8.40.0",
-    "vite": "^7.1.3"
+    "@tanstack/react-router": "^1.132.31",
+    "@tanstack/react-router-devtools": "^1.132.31",
+    "@tanstack/router-plugin": "^1.132.31",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
+    "@vitejs/plugin-react": "^5.0.4",
+    "globals": "^16.4.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "type-fest": "^5.0.1",
+    "vite": "^7.1.8"
   },
   "dependencies": {
-    "@effect/platform": "^0.90.6",
-    "@effect/platform-browser": "^0.70.0",
+    "@effect/platform": "^0.92.1",
+    "@effect/platform-browser": "^0.72.0",
     "@radix-ui/themes": "^3.2.1",
     "@typed/async-data": "^0.13.1",
     "@typed/id": "^0.17.2",
     "@typed/lazy-ref": "^0.3.3",
-    "effect": "^3.17.9",
+    "effect": "^3.18.1",
     "effect-fc": "workspace:*",
     "react-icons": "^5.5.0"
   },
   "overrides": {
-    "@types/react": "^19.1.11",
-    "effect": "^3.17.9",
-    "react": "^19.1.1"
+    "@types/react": "^19.2.0",
+    "effect": "^3.18.1",
+    "react": "^19.2.0"
   }
 }
